linked problems/new to suggestions (left-navbar)

--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -18,8 +18,10 @@
 			<% end %>
 			<%= link_to knowledgebase_path do %>
 				<li><i class="icon-book icon-white"></i> &nbsp Knowledge Base</li>
-			<% end %>	
-			<li><i class="icon-wrench icon-white"></i> &nbsp Suggestions & Bugs</li>
+			<% end %>
+			<%= link_to suggestions_path do %>	
+				<li><i class="icon-wrench icon-white"></i> &nbsp Suggestions & Bugs</li>
+			<% end %>
 		</ul>
 	</div>
 	
