--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,12 @@
-<h1>Knowledge Base </h1></br>
-
-
-<h4><b> Investing Banking <b> </h4>
-
-<li> Manual Link to first article </li>
+<div class="container">
+	<div class="row">
+		<hr><br/>
+		<div class="span12">
+			<h1>Knowledge Base </h1></br>
+			<h4><b> Investing Banking <b> </h4>
+			<ul>
+				<li> Manual Link to first article </li>
+			</ul>
+		</div>
+	</div>
+</div>
