--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,6 +1,6 @@
-<div class="container pad-top">
-	<div class="row pad-top">
-		<div class="span7 pad-top">
+
+	<div class="row-fluid margin-top">
+		<div class="span10">
 			<h3>
 			<% cache @job do %>
 				<%= @job.name %><br />
@@ -36,17 +36,6 @@
 			<% end %>
 			
 		</div>
-		<div class="span3 pull-right">
-			<!-- Place company logo here later -->
-			
-
-		</div>
 	</div>
-</div>
 
-<div class="container">
-	<div class="row">
 
-		
-	</div>
-</div>	
