--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -142,6 +142,10 @@ input[type='checkbox'] {
 	border-top:$standard-line;
 }
 
+.margin-top{
+	margin-top:60px;
+}
+
 
 /* ========= END SECTION: UNIVERSALS =========*/
 
