--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,6 +1,4 @@
-<br />
-<div class="container">
-	<div class="row">
+	<div class="row-fluid">
 		<div class="span8">
 			
 			<% cache @company do %>
@@ -74,4 +72,3 @@
 		</div>
 	</div>
 	
-</div>
