--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -1,7 +1,7 @@
-	<% if current_user.has_no_applists? %>
-		<div class="introBar alert alert-info">
+	<% if current_user.has_no_applists? %>	
+		<div class="margin-top">
 			<%= link_to jobs_path do %>
-				<h4>Start tracking jobs now!</h4></br>
+				<h4>Start tracking jobs now!</h4>
 				<p> ResumeQuery is great for reducing the stress and business of job applications
 					 by having them all sorted in one place for you </p>
 			<% end %>
@@ -19,14 +19,14 @@
 			<!-- This is shown initially -->
 			<div class="appManage" id="app-line-<%=apps.id%>">
 				<div class="row-fluid">	
-					<div class="span4">
+					<div class="span5">
 						<%= link_to apps do %>
 							<p><strong> <%= company.name %></strong> | 
 							<%= job.name %><span class ="hide" id ="expand-<%=apps.id%>">&nbsp&nbsp + Expand  </span></p>
 						<% end %>
 					</div>
 
-					<div class="span2">
+					<div class="span3">
 						<div class="pull-right red-text">
 							<%= apps.status%>
 						</div>	
@@ -43,4 +43,4 @@
 			</div>
 		<% end %>
 	<% end %>
-</div>
+
