--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,12 @@
 					<div class="span2">
 						<%= render 'layouts/left-board'%>
 					</div>
-					<div class="span10">
+					<div class="span8">
 						<%= yield %>
 					</div>
+					<div class="span2">
+						<%= render 'layouts/right-board'%>
+					</div>	
 				</div>
 			</div>
 		<% else %>
