--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
 		<div class="span12">
 			<div class="footer">
 				<ul class="inline">
-					<li><strong>resumeQuery</strong></li>
+					<li><strong>resQuery</strong></li>
 					<li><%= link_to 'About', about_path %></li>
 					<% if false %>
 					<li><%= link_to 'Contact Us' %></li>
