--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -42,7 +42,7 @@
 		<ul class="unstyled">
 			<li><i class="icon-comment icon-white"></i> &nbsp Contact Us</li>
 			<%= link_to about_path do %>
-				<li><i class="icon-user icon-white"></i> &nbsp About ResumeQuery</li>
+				<li><i class="icon-user icon-white"></i> &nbsp About ResQuery</li>
 			<% end %>
 			
 		</ul>
