--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,10 @@
+<% if signed_in? %>
+<div class="container-fluid margin-top">
+	<div class="row-fluid">
+<% else %>		
 <div class="container">
 	<div class="row">
+<% end %>
 		<% if !signed_in?%>
 			<hr><br/>
 		<% end %>
