added filesitems to the blank signed in page

--- a/app/views/layouts/_right-board.html.erb
+++ b/app/views/layouts/_right-board.html.erb
@@ -1,5 +1,16 @@
-<div class="margin-top">
+<div class="right-board">
+	<div class="right-board-heading">
+		These could help:
+	</div>
 
-	ideas!
+	<div class="right-board-info">
+		<b>Standing out in an IB interview</b></br>
+		<p>Lorem Ipsum Doren amintvae asdagaeh dadisein janugunlit</p>
+	</div>
+	
+	<div class="right-board-info">
+		<b>Cover Letter info</b></br>
+		<p>Stuck on cover letters? We have a template</p>
+	</div>
+	
 </div>
-
