--- a/app/views/articles/_article_form.html.erb
+++ b/app/views/articles/_article_form.html.erb
@@ -3,6 +3,7 @@
 				<%= f.text_field :author, :placeholder => "Author" %> </br>
 				<%= f.text_field :published, :placeholder => "Date, insert as DD/MM/YYYY" %>
 				<%= f.text_field :title, :placeholder => "Title" %>
+				<%= f.text_field :tagline, :placeholder => 'Tagline' %>
 				<%= f.text_area :content, :placeholder => "Content"%> </br>
 				
 					
