--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,7 @@
 	<div class="row">
 		<div class="span12">
 			<h1> <%= @article.title %> </h1>
+			<h3> <%= @article.tagline %> </h3>
 			<h4> <%= @article.published %></h4></br>
  
 			<%= @article.content %>
