--- a/app/views/dashboards/_new_user_page.html.erb
+++ b/app/views/dashboards/_new_user_page.html.erb
@@ -1,7 +1,7 @@
 <div class="margin-top">
 	<%= link_to jobs_path do %>
-		<h4>Start tracking jobs now!</h4>
-		<p> ResQuery is great for reducing the stress and business of job applications
+		<h4>Welcome to ResQuery <%= current_user.first_name %>!</h4>
+		<p> Start Tracking jobs now! ResQuery is great for reducing the stress and business of job applications
 			 by having them all sorted in one place for you </p>
 	<% end %>
 </div>
@@ -9,14 +9,19 @@
 
 <div class="row-fluid margin-top">
 	<div class="span6">
-		<h5>Things from our knowledge base:</h5>
-		Here have some Articles
-	</div>
-	<div class="span6">
-		<h5>Jobs that might interest you:</h5>
+		<h5>Follow your first job:</h5>
 		<% @jobs.each do |job| %>
 			<%=link_to job.name, job %><br />
 		<% end %>
 	</div>
-	
+	<div class="span6">
+		<h5>Or look up things related to your discipline:</h5>
+
+	</div>
+</div>
+
+
+<div class="row-fluid margin-top">
+	<h5>Things from our knowledge base:</h5>
+
 </div>
