--- a/app/views/user_mailer/signup_confirmation.html.erb
+++ b/app/views/user_mailer/signup_confirmation.html.erb
@@ -1,34 +1,39 @@
-<!-- Add HTML styling -->
+<html>
+	<head><title>Welcome to ResQuery!</title></head>
+	<body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" bgcolor='#ffffff' >
 
-
-Logo (top-left) <b> Welcome to ResQuery </b>
-
-Hi <%=@user.first_name %>,
-
-Welcome to ResQuery and thanks for signing up. You have joined hundreds of other students who are managing their job apps online and are committed to getting the jobs of their dreams. 
-
-Sign into your account now click here
-
-Important Information:
-Email / Username: <%= @user.email %> 
-
-<right side>
-	Access our knowledge base:
-		How to prepare for internship season (add link)
-		How to write an investment banking cover letter (add link)
-		
-	Improve your resume
-	Get expert help with your Resume (add link)
+	<style> 
 	
-</br>
-Thank you for choosing to use ResQuery to manage your apps online
+	</style>
 
-Wishing you the best of success,
+	
+	<h1>Logo (top-left) <b> Welcome to ResQuery </b></h1>
 
-[Signature]
+	Hi <%=@user.first_name %>,
 
-The Team at ResQuery
+	Welcome to ResQuery and thanks for signing up. You have joined hundreds of other students who are managing their job apps online and are committed to getting the jobs of their dreams. 
 
+	Sign into your account now click here
 
+	Important Information:
+	Email / Username: <%= @user.email %> 
 
+	<right side>
+		Access our knowledge base:
+			How to prepare for internship season (add link)
+			How to write an investment banking cover letter (add link)
+		
+		Improve your resume
+		Get expert help with your Resume (add link)
+	
+	</br>
+	Thank you for choosing to use ResQuery to manage your apps online
 
+	Wishing you the best of success,
+
+	[Signature]
+
+	The Team at ResQuery
+
+</body>
+</html>
