added simple format to articles

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
 			<h1> <%= @article.title %> </h1>
 			<h4> <%= @article.published %></h4></br>
  
-			<%= @article.content %>
+			<%= simple_format(@article.content) %>
 		</div>
 	</div>			
 </div>
