--- a/app/views/user_mailer/index.html
+++ b/app/views/user_mailer/index.html
@@ -4,6 +4,7 @@
 
 
 <STYLE>
+@import url(http://fonts.googleapis.com/css?family=Noto+Sans:400,700);
 .headerTop{background-color:#FC6;border-top:0 solid #000;border-bottom:1px solid #FFF;text-align:center}
 .adminText{font-size:10px;color:#960;line-height:200%;font-family:verdana;text-decoration:none}
 .headerBar{background-color:#FFF;border-top:0 solid #333;border-bottom:10px solid #FFF}
