added changes to articles show

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,4 @@
-<div class="container">
-	<div class="row">
+	<div class="row-fluid">
 		<div class="span12">
 			<h1> <%= @article.title %> </h1>
 			<h4> <%= @article.published %></h4></br>
@@ -7,6 +6,3 @@
 			<%= simple_format(@article.content) %>
 		</div>
 	</div>			
-</div>
-
-
