changed article font-size

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -361,3 +361,7 @@ input[type='checkbox'] {
 	border-bottom:1px solid $light-grey;
 	padding:20px 0px 10px;
 }
+
+.article-content{
+	font-size:15px;
+}
