--- a/app/views/user_mailer/index.html
+++ b/app/views/user_mailer/index.html
@@ -5,6 +5,7 @@
 
 <STYLE>
 @import url(http://fonts.googleapis.com/css?family=Noto+Sans:400,700);
+body{	font-family: 'Noto Sans', sans-serif;}
 .headerTop{background-color:#FC6;border-top:0 solid #000;border-bottom:1px solid #FFF;text-align:center}
 .adminText{font-size:10px;color:#960;line-height:200%;font-family:verdana;text-decoration:none}
 .headerBar{background-color:#FFF;border-top:0 solid #333;border-bottom:10px solid #FFF}
@@ -32,9 +33,9 @@ h2{color:#fff;background:#0090ca;font-size:12pt;line-height:100%;margin:0 0 .5em
 <td bgcolor="#FFFFFF" valign="top" style="font-size:9pt;color:#000000;font-family:trebuchet ms; text-align:left;" align="left">
 
 <p style="text-align:justify">
-Hi <%= @user.first_name %>, <br/>
+<h3>Hi <%= @user.first_name %>,</h3>
 
- - this is BSOC Weekly, your student newsletter about what's happening. We're here so you have the best times at uni, and ensure your at your prime for your future endeavours. Give us a read, find out what's on, and we'll see you at our events soon! Don't forget to visit our links!
+Welcomem to ResQuery and thanks for signing up! You've j
 </p>
 
 
