--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,7 +2,9 @@
 		<div class="span12">
 			<h1> <%= @article.title %> </h1>
 			<h4> <%= @article.published %></h4></br>
- 
+ 			
+<div class="article-content">
 			<%= simple_format(@article.content) %>
+</div>			
 		</div>
 	</div>			
