--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -2,7 +2,7 @@
 		<%= render 'dashboards/new_user_page'%>
 	<% else %>
 
-		<div class="app-title pad-bottom">
+		<div class="app-title pad-bottom margin-top">
 			<h4>Your Dashboard</h4>
 		</div>
 		
