--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,5 +1,5 @@
-<div class="row-fluid">
-	<div class="span12 jobIndex">
+<div class="row-fluid margin-top">
+	<div class="span10 jobIndex">
 		<h3>All Job Opportunities</h3>
 		
 		<%= link_to "Advanced Search", new_search_path %>
