--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-	<div class="row">
+
+	<div class="row-fluid margin-top">
 		<div class="span6">
 		<h3>Edit <%= resource_name.to_s.humanize %> Details</h3>
 		<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
@@ -37,4 +37,3 @@
 		<p><%= button_to "Cancel my account", registration_path(resource_name), :class => "btn", :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
 		</div>
 	</div>
-</div>
