--- a/app/views/layouts/_right-board.html.erb
+++ b/app/views/layouts/_right-board.html.erb
@@ -1,6 +1,18 @@
 <div class="right-board">
-	<div class="right-board-heading">
-		These could help:
+
+	<div class="right-board-heading margin-top">
+		Advice from HR
+	</div>
+
+	<div class="right-board-info">
+		<b>"Take your time, be organised and thoughtful</b>
+		as you do your applications. Advice here is nice, its calming and 
+		gives legitimacy to the stuff under here"<br />
+		-Joan Grey, HR at WKJames
+	</div>
+	
+	<div class="right-board-heading ">
+		These could help you:
 	</div>
 
 	<div class="right-board-info">
@@ -12,5 +24,12 @@
 		<b>Cover Letter info</b></br>
 		<p>Stuck on cover letters? We have a template</p>
 	</div>
+	
+	<div class="right-board-info">
+		<b>Secondary Helper</b></br>
+		<p>Stuck on cover letters? We have a template</p>
+	</div>
+	
+
 	
 </div>
