--- a/app/views/layouts/_right-board.html.erb
+++ b/app/views/layouts/_right-board.html.erb
@@ -1,6 +1,8 @@
 <div class="right-board">
 
-	<div class="right-board-heading margin-top">
+	<div class="margin-top">
+	</div>
+	<div class="right-board-heading">
 		Advice from HR
 	</div>
 
