--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -147,6 +147,10 @@ input[type='checkbox'] {
 	margin-top:60px;
 }
 
+.margin-top-right-board{
+	margin-top:59px;
+}
+
 
 /* ========= END SECTION: UNIVERSALS =========*/
 
@@ -210,16 +214,16 @@ input[type='checkbox'] {
 }
 
 .blank-area {
-	height:200px;
+	height:140px;
 }
 
 
 .left-dashboard {
 	/*box-shadow: 0 4px 17px -5px $dark-grey;*/
 	background-color:$base-green;
-	min-height:700px;
-	height:100%;
-	position:absoloute;
+	min-width:180px;
+	min-height:100%;
+	position:fixed;
 	padding-left:25px;
 	margin-left:-20px;
 	a:hover{
@@ -342,7 +346,7 @@ input[type='checkbox'] {
 
 .hierachy{
 	padding:30px 0px 20px;
-
+	font-size:16px;
 
 }
 
