--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,14 @@
 <% if signed_in? %>
-<div class="container-fluid margin-top">
+
+<div class="hierachy">
+	<div class="row-fluid">
+		<div class="span12 bottom-border">
+			<b>Knowledge Base</b>
+		</div>
+	</div>
+</div>
+
+<div class="container-fluid">
 	<div class="row-fluid">
 <% else %>		
 <div class="container">
