--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,6 +1,13 @@
-<div class="row-fluid margin-top">
+<div class="hierachy">
+	<div class="row-fluid">
+		<div class="span12 bottom-border">
+			<b>Open Job Opportunities</b>
+		</div>
+	</div>
+</div>
+
+<div class="row-fluid">
 	<div class="span10 jobIndex">
-		<h3>All Job Opportunities</h3>
 		
 		<%= link_to "Advanced Search", new_search_path %>
 		
