--- a/app/views/layouts/_right-board.html.erb
+++ b/app/views/layouts/_right-board.html.erb
@@ -1,6 +1,6 @@
 <div class="right-board">
 
-	<div class="margin-top">
+	<div class="margin-top-right-board">
 	</div>
 	<div class="right-board-heading">
 		Advice from HR
