--- a/app/views/problems/new.html.erb
+++ b/app/views/problems/new.html.erb
@@ -1,5 +1,18 @@
-<div class="margin-top row-fluid">
+<div class="hierachy">
+	<div class="row-fluid">
+		<div class="span12 bottom-border">
+			<span class="dashboard-heading">We appreciate the feedback!</span>
+		</div>
+	</div>
+</div>
+
+<div class="row-fluid">
+
 	<div class="span12">
+
+		<div class="problem-heading">
+			<h1>Harro</h1>
+		</div>
 		Have you found any bugs on the website?<br />
 		Do you think we can improve the website to help you more?<br /> 
 		We're more than happy to hear from you, and we'll try to get back to you ASAP!
