--- a/app/views/dashboards/_new_user_page.html.erb
+++ b/app/views/dashboards/_new_user_page.html.erb
@@ -1,10 +1,18 @@
-<div class="margin-top">
-	<%= link_to jobs_path do %>
-		<h4>Welcome to ResQuery <%= current_user.first_name %>!</h4>
-		<p> Start Tracking jobs now! ResQuery is great for reducing the stress and business of job applications
-			 by having them all sorted in one place for you </p>
-	<% end %>
+<div class="hierachy">
+	<div class="row-fluid">
+		<div class="span12 bottom-border">
+			<b><span class="green-heading">Welcome to ResQuery <%= current_user.first_name %>!</span></b>
+		</div>
+	</div>
 </div>
+
+
+<%= link_to jobs_path do %>
+	<h4></h4>
+	<p> Start Tracking jobs now! ResQuery is great for reducing the stress and business of job applications
+		 by having them all sorted in one place for you </p>
+<% end %>
+
 
 
 <div class="row-fluid margin-top">
