--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -22,8 +22,7 @@
 		</div>
 		
 		<div class="info-text hide" id="content-2">
-			<h1>Save time by finding <span style="text-decoration:underline">all</span> the best grad
-				 and internship jobs available</h1>
+			<h1>We list them all.</h1>
 				<br />
 			<p>We don't profit from employers so we can put students first.
 				This means we don't just list the companies that have paid us, we list all that
