--- a/app/views/problems/new.html.erb
+++ b/app/views/problems/new.html.erb
@@ -1,7 +1,7 @@
 <div class="hierachy">
 	<div class="row-fluid">
 		<div class="span12 bottom-border">
-			<span class="dashboard-heading">We appreciate the feedback!</span>
+			We appreciate the feedback!
 		</div>
 	</div>
 </div>
@@ -10,8 +10,9 @@
 
 	<div class="span12">
 
-		<div class="problem-heading">
-			<h1>Harro</h1>
+		<div class="green-heading">
+			<h3>Thanks for coming to this page<br/>
+				Is there something we can improve for you?</h3>
 		</div>
 		Have you found any bugs on the website?<br />
 		Do you think we can improve the website to help you more?<br /> 
