--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
 <div class="hierachy">
 	<div class="row-fluid">
 		<div class="span12 bottom-border">
-			<%= link_to "Dashboard", root_path%> &nbsp > Knowledge Base &nbsp > <%= @article.title %>
+			<%= link_to "Knowledge Base", articles_path %> &nbsp > <%= @article.title %>
 		</div>
 	</div>
 </div>
@@ -12,7 +12,7 @@
 <div class="container-fluid margin-top">
 	<div class="row-fluid">
 <% else %>		
-<div class="container">
+<div class="container margin-top">
 	<div class="row">
 <% end %>
 
