--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,60 +1,61 @@
-	<div class="row-fluid margin-top">
-		<div class="span8">
-			
-			<% cache @company do %>
-			
-				<div class="center-alignment pad-bottom">
-					<h3><%= @company.name %></h3>
-						<% if can? :update, @company %>
-							<p><%= link_to 'Edit company details', edit_company_path %></p>
-						<% end %>
-						<%= @company.industry %><br />
-						<%= link_to "#{@company.website}", "http://#{@company.website}" %></br>
-
-				</div>
-				<div class="top-bottom-borders">
-					HR Email: <%= @company.hr_email %></br>
-				</div>
-				<br />
-				<p><%= simple_format(@company.info) %></p>
-			
-			
-			<% end %>
-		
-		</div>
-		
-	
-		
-		<div class="span4">
-			<% if can? :create, @job %>
-		
-				<%= link_to "Edit Company", edit_company_path %>
-				
-				<legend>Create a job</legend>
-				<%= form_for @jobs, :as => :jobs do |f| %>
-					<%= f.text_field :name, :placeholder => "Name" %>
-					<%= f.collection_select :category_id, Category.order(:discipline), :id, :discipline %></br>
-					<%= f.text_field :info, :placeholder => "Information" %>
-					<%= f.text_field :due_date, :placeholder => "Date, insert as DD/MM/YYYY"%>
-					<%= f.hidden_field :id, :value => params[:id] %>
-					<%= f.collection_select :role_id, Role.order(:role), :id, :role, include_blank: true %>
-					<%= f.submit %>
-				<% end %>
-			<% end %>
-				
-			<% if @company.has_number_of_jobs > 0 %>
-				<strong> Job opportunities with <%= @company.name %>: </strong></br></br>
-				<ul class="nav nav-pills nav-stacked">
-					<% @company.has_jobs.each do |job|%>
-						<li><%=link_to	"#{job.name}", job %></li>
-					<% end %>
-				</ul>
-			<% end %>
+<div class="hierachy">
+	<div class="row-fluid">
+		<div class="span12 bottom-border">
+			<%= link_to "Companies", companies_path %> &nbsp > &nbsp <%= @company.name%>
 		</div>
 	</div>
+</div>
+
+<div class="row-fluid">
+	<div class="span8">		
+		<% cache @company do %>		
+			<div class="center-alignment pad-bottom">
+				<h3><%= @company.name %></h3>
+					<% if can? :update, @company %>
+						<p><%= link_to 'Edit company details', edit_company_path %></p>
+					<% end %>
+					<%= @company.industry %><br />
+					<%= link_to "#{@company.website}", "http://#{@company.website}" %></br>
+				</div>
+			<div class="top-bottom-borders">
+				HR Email: <%= @company.hr_email %></br>
+			</div>
+			<br />
+			<p><%= simple_format(@company.info) %></p>
+		
+		
+		<% end %>
 	
- 	<% if can? :create, @board %>
-		<div class="row-fluid">
+	</div>	
+	<div class="span4">
+		<% if can? :create, @job %>	
+			<%= link_to "Edit Company", edit_company_path %>
+			
+			<legend>Create a job</legend>
+			<%= form_for @jobs, :as => :jobs do |f| %>
+				<%= f.text_field :name, :placeholder => "Name" %>
+				<%= f.collection_select :category_id, Category.order(:discipline), :id, :discipline %></br>
+				<%= f.text_field :info, :placeholder => "Information" %>
+				<%= f.text_field :due_date, :placeholder => "Date, insert as DD/MM/YYYY"%>
+				<%= f.hidden_field :id, :value => params[:id] %>
+				<%= f.collection_select :role_id, Role.order(:role), :id, :role, include_blank: true %>
+				<%= f.submit %>
+			<% end %>
+		<% end %>
+			
+		<% if @company.has_number_of_jobs > 0 %>
+			<strong> Job opportunities with <%= @company.name %>: </strong></br></br>
+			<ul class="nav nav-pills nav-stacked">
+				<% @company.has_jobs.each do |job|%>
+					<li><%=link_to	"#{job.name}", job %></li>
+				<% end %>
+			</ul>
+		<% end %>
+	</div>
+</div>
+	
+<% if can? :create, @board %>
+	<div class="row-fluid">
 			<div class="span12">
 				<%= form_for @boards, :as => :boards do |f| %>
 					<%= f.text_field :name, :placeholder => "Board Name" %>
@@ -63,7 +64,7 @@
 				<% end %>
 			</div>
 		</div>	
-	<% end %>
+<% end %>
 	<div class="row-fluid">
 		<div class="span12">
 			<% @allBoards.each do |board| %>
