--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,23 +1,20 @@
-<div class="container footing">
+<div class="container footing margin-top">
 	<div class="row">
 		<div class="span12">
 			<div class="footer">
 				<ul class="inline">
 					<li><strong>resQuery</strong></li>
 					<li><%= link_to 'About', about_path %></li>
-					<% if false %>
-					<li><%= link_to 'Contact Us' %></li>
-					<li><%= link_to 'Privacy Policy' %></li>
-					<li><%= link_to 'Blog' %></li>				
-					<li><%= link_to 'Twitter' %></li>
-					<% if signed_in? %>
-				      <li><%= link_to 'Help' %></li>
+						<% if false %>
+						<li><%= link_to 'Contact Us' %></li>
+						<li><%= link_to 'Privacy Policy' %></li>
+						<li><%= link_to 'Blog' %></li>				
+						<li><%= link_to 'Twitter' %></li>
+						<% if signed_in? %>
+					      <li><%= link_to 'Help' %></li>
+						<% end %>					
 					<% end %>
-					
-					<% end %>
-					
 					<li class="pull-right">  Happy <%= Time.now.localtime.strftime("%A") %> ! &nbsp</li>
-					
 				</ul>
 			</div>
 		</div>
