--- a/app/views/layouts/_right-board.html.erb
+++ b/app/views/layouts/_right-board.html.erb
@@ -1,7 +1,9 @@
 <div class="right-board">
-
-	<div class="margin-top-right-board">
+	
+	<div class="right-board-info">
+		<span class="pull-right pull-up">  Happy <%= Time.now.localtime.strftime("%A") %> ! &nbsp</span>
 	</div>
+	
 	<div class="right-board-heading">
 		Advice from HR
 	</div>
