--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -226,6 +226,7 @@ input[type='checkbox'] {
 	min-width:180px;
 	min-height:100%;
 	position:fixed;
+	margin-right:1px;
 	padding-left:25px;
 	margin-left:-20px;
 	a:hover{
@@ -395,4 +396,10 @@ input[type='checkbox'] {
 
 .green-heading{
 	color:$base-green;
+}
+
+.pull-up{
+	margin-top:-10px;
+
+	font-size:14px;
 }
