--- a/app/views/layouts/_signed_in_header.html.erb
+++ b/app/views/layouts/_signed_in_header.html.erb
@@ -1,5 +1,5 @@
 <div class="signedInHeader">
-	<div class="container-fluid">
+	<div class="container">
 		<div class="row">
 			<div class="span2">
 				<%= link_to image_tag('resumeQuery_white.png'), root_path %> 
@@ -13,9 +13,5 @@
 				</ul>
 			</div>	
 		</div>
-		
-		<!-- Future search area goes here. Graphic Base style will be like amazon.com -->
-		
-		
 	</div>
 </div>
