added buy button on the right

--- a/app/views/layouts/_right-board.html.erb
+++ b/app/views/layouts/_right-board.html.erb
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="https://gumroad.com/js/gumroad.js"></script>
 <div class="right-board">
 	
 	<div class="right-board-info">
@@ -24,9 +25,8 @@
 		<p>Lorem Ipsum Doren amintvae asdagaeh dadisein janugunlit</p>
 	</div>
 	
-	<div class="right-board-info">
-		<b>Cover Letter info</b></br>
-		<p>Stuck on cover letters? We have a template</p>
+	<div class="right-board-info center-alignment">
+		<%= link_to "The ResQuery Investment Banking Cover Letter Template BUY NOW FOR $29", "https://gumroad.com/l/IBcoverletter", :class=>"btn btn-info"%>
 	</div>
 	
 	<div class="right-board-info">
