add links to the two IB articles

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -21,7 +21,8 @@
 			<h1>Knowledge Base </h1></br>
 			<h4><b> Investing Banking</b></h4>
 			<ul>
-				<li> Manual Link to first article </li>
+				<li> <%= link_to "How to prepare an M&A Deal for an Investment Banking Interview", 'articles/1' %>  </li>
+				<li> <%= link_to "The Art of the Investment Banking Cover Letter", 'articles/2' %> </li> 
 			</ul>
 		</div>
 	</div>
