added styling and links to emails

--- a/app/views/user_mailer/index.html
+++ b/app/views/user_mailer/index.html
@@ -15,7 +15,7 @@ body{	font-family: 'Noto Sans', sans-serif;}
 .footerRow{background-color:#FFC;border-top:10px solid #FFF}
 .footerText{font-size:10px;color:#960;line-height:100%;font-family:verdana}
 a{color:#1c51a8}
-h1{color:#fff;background:#000;font-size:16pt;line-height:100%;margin:1.5em 0 .5em;padding:.5em}
+h1{font-size:16pt;line-height:100%}
 h2{color:#fff;background:#0090ca;font-size:12pt;line-height:100%;margin:0 0 .5em;padding:.5em}
 </STYLE>
 
@@ -30,99 +30,49 @@ h2{color:#fff;background:#0090ca;font-size:12pt;line-height:100%;margin:0 0 .5em
 
 <table width="550" cellpadding="20" cellspacing="0" bgcolor="#FFFFFF">
 <tr>
-<td bgcolor="#FFFFFF" valign="top" style="font-size:9pt;color:#000000;font-family:trebuchet ms; text-align:left;" align="left">
+<td bgcolor="#FFFFFF" valign="top" style="font-size:10pt;color:#000000;font-family:trebuchet ms; text-align:left;" align="left">
 
 <p style="text-align:justify">
-<h3>Hi <%= @user.first_name %>,</h3>
 
-Welcomem to ResQuery and thanks for signing up! You've j
+	<h1> Welcome to ResQuery </h1>
+
+	<h3>Hi <%= @user.first_name %>,</h3>
 </p>
 
-
-<p><h1 style="color:#fff;background:#000;font-size:16pt;line-height:100%;margin:1.5em 0 .5em;padding:.5em">Events</h1></p>
-<p><h2 style="color:#fff;background:#0090ca;font-size:12pt;line-height:100%;margin:0 0 .5em;padding:.5em">Modern Romance Ball</h2></p>
-
-<a href="http://www.facebook.com/unswbsoc"><img border="0" title="Modern Romance Ball" alt="Modern Romance Ball" src="http://www.unswbsoc.com/mail/2010/s2w4/modrom_edm_nice.jpg"></a>
-
-<table border="0" width="512px"><tr><td style="font-size:9pt;color:#000000;font-family:trebuchet ms;width:490px">
-<br>
-<strong>Time:</strong> 7pm**<br>
-<strong>Date:</strong> Friday 10 September (midsemester break)<br>
-<strong>Venue:</strong> Dockside, The Balcony Level, Cockle Bay Wharf<br>
-<strong>Cost:</strong> $100 (Arc) / $110 (non-Arc)<br><br></td>
-
-
-<td align="right" valign="top" style="width:22px"><a target="_blank" href="http://www.facebook.com/unswbsoc?v=app_2344061033"><img border="0" src="http://www.unswbsoc.com/mail/2010/template/facebook-event.png" title="Facebook Event" alt="Facebook Event"></a></td></tr></table>
-
-
-<br><br>
-Tickets available from Quad1025 all week and online at <a href="http://unswbsoc.iwannaticket.com.au/">unswbsoc.iwannaticket.com.au/</a></p>
-
-
-
-
-<h2 style="color:#fff;background:#0090ca;font-size:12pt;line-height:100%;margin:0 0 .5em;padding:.5em">Be a Peer Mentor leader for 2011!</h2></p>
-<p>
-<a href="http://www.unswbsoc.com/education/402-be-a-peer-mentor-leader-for-2011">
-<img src="http://www.unswbsoc.com/mail/2010/s2w7/beapmp.jpg"></a>
-<br><br>
-<a href="http://www.unswbsoc.com/education/402-be-a-peer-mentor-leader-for-2011">
-<b>Applications are open for UNSW Business Society Peer Mentors in 2011!</b><br><br></a>
-We're looking for keen Business students who are in 2nd year or above in 2011 to be Mentors to first year Business Students next year in Semester 1.<br><br>
-You will work with a partner Mentor to guide a group of 8-10 students through their first few weeks of being at UNSW by giving them helpful tips about things you wish you had known when you were a first year and bond with them through group activities.<br><br>
-Being a BSOC Peer Mentor looks fantastic on your Resume and Secondary Transcript and gives you the opportunity to help out first year Business students as they make the transition from high school to university!<br><br>
-<a href="http://www.unswbsoc.com/education/402-be-a-peer-mentor-leader-for-2011"> <b> Apply here now!</b></a><br><br>
-Short interviews with the Education Directors will be conducted after Mid-Semester Break in Semester 2, 2010.
-</p>
-
-
-
-
-<p><h1 style="color:#fff;background:#000;font-size:16pt;line-height:100%;margin:1.5em 0 .5em;padding:.5em">Careers</h1>
-
-<p><h2 style="color:#fff;background:#0090ca;font-size:12pt;line-height:100%;margin:0 0 .5em;padding:.5em">Westpacís Summer Internship Program </h2></p>
-
-<table style="width:512px" style="border-top:10pt solid #ffffff"><tr><td align="center" colspan="2" style="width:512px; padding:0.5em;"><a target="_blank" href="http://www.westpac.com.au/corporate-banking/about-WIB/"><img title="Westpac Institutional Banking" alt="Westpac Institutional Banking" src="http://www.unswbsoc.com/mail/2010/template/westpacinstitutional.png" border="0"></a></td></tr></table>
-
-
-<p>Westpac Institutional Bank is the #1 rated* Institutional bank in Australia and New Zealand. With intern positions available in Financial Markets, Equities, and Corporate & Institutional Banking, you have the chance to be a part of a team recognised as a market leader. 
-For more information and to apply, visit <a href="http://www.unswbsoc.com/component/banners/click/12">westpac.com.au/summerinternships</a> 
-</p><p>Applications close 3 September, 2010."</p> 
-
-
-<p>Students can also check out our new YouTube video on 'A Day in the Life of an Equities Graduate' at <a href="http://www.westpac.com.au/about-westpac/careers/westpac-graduates/equities">westpac.com.au/about-westpac/careers/westpac-graduates/equities</a></p>
-
-
-
-<h2 style="color:#fff;background:#0090ca;font-size:12pt;line-height:100%;margin:0 0 .5em;padding:.5em">Chartered Accountants Student Challenge</h2></p>
-<p>Take on the Chartered Accountants Student Challenge to apply what you've learnt at university to a real-life business problem and help make a difference.<br><br>
-Entering this online accounting competition will give you a taste of the varied and interesting issues you will likely encounter in business.
-It is the perfect opportunity to give your CV that all important edge and to share in $50,000 worth of prizes.<br><br>
-Competition runs from 1 May ñ 31 August 2010.<br><br>
-Register now at <a href="http://www.unswbsoc.com/component/banners/click/11" target="_blank">studentchallenge.com.au</a>
+<p style="text-align:justify">
+	
+Welcome to ResQuery and thanks for signing up. You have joined hundreds of other students who are managing their job apps online and are committed to getting the jobs of their dreams. 
 </p>
 
 <p>
-<h1 style="color:#fff;background:#000;font-size:16pt;line-height:100%;margin:1.5em 0 .5em;padding:.5em">Knowledge @ Australian School of Business</h1>
-<table border="0"><tr><td valign="top"><img src="http://www.unswbsoc.com/mail/2010/s2w2/doorin.jpg" style="float:left"></td>
-<td style="font-size:9pt;color:#000000;font-family:trebuchet ms;width:490px">
-		
-<b>Do you want to kick start your career?</b> 
-<br><br>
-Knowledge opens doors. Make sure that you know about the hot business issues that arenít covered in your textbooks.
-<br><br> 
-Knowledge@Australian School of Business is an online business portal, free, available to everyone, anywhere in the world. Keep your finger on the pulse by getting the knowledge that matters to your future employers.
-<br><br> 
-Knowledge will open doors for you <a href="http://knowledge.asb.unsw.edu.au/signup.cfm?utm_source=bsoc&utm_medium=newsletter&utm_campaign=alayna">click here</a> to sign up and activate your free membership today.
-</td></tr></table></p>
+	Sign into your account now <a href = "http://www.resquery.com/users/sign_in"> click here</a>
 
-<p><h1 style="color:#fff;background:#000;font-size:16pt;line-height:100%;margin:1.5em 0 .5em;padding:.5em">Publications</h1>
-<h2 style="color:#fff;background:#0090ca;font-size:12pt;line-height:100%;margin:0 0 .5em;padding:.5em">The 2010 BSOC Careers Guide</h2></p>
-<p style="padding: 1em 0"><a href="http://www.unswbsoc.com/careersguide"><img border="0" title="Careers Guide" alt="Careers Guide" src="http://www.unswbsoc.com/mail/2010/s2w3/cguide_small.jpg" style="border-top: 4pt solid #ffc600; border-bottom: 4pt solid #ffc600; padding: 7pt 0"></a></p>
+<p>
+</br>
+<b> Access our knowledge base </b>
+	<ul>
+		<li> <a href = "http://www.resquery.com/articles/8"> How to prepare for internship season </a></li>
+		<li> <a href = "http://www.resquery.com/articles/2"> The art of the Investment Banking Cover Letter </a> </li>
+	</ul>
+</br>
+<b>Improve your applications </b>
+<p>
+Do you want some guidance or another opinion on your resume or cover letter. <a href = "http://www.resquery.com/articles/9">Click here to find out more</a>
+</br>
+</br>
+</br>
+<p>
+Thank you for choosing to use ResQuery to manage your apps online
+<p>
+Wishing you the best of success,
+</br>
+The Team at ResQuery
 
-Our Annual Careers Guide is updated with the latest information and articles that help clarify your career path, understand what's out there and what opportunities you can grab now! Each major has its own dedicated section, with advice on how to do well in them, and lists of related companies that employ graduates of those majors. Find out what the future holds for you! 
-<br><br>
-<a href="http://www.unswbsoc.com/news">Grab it Now!</a>
+
+
+
+
+
 
 
 
