--- a/app/views/user_mailer/signup_confirmation.html.erb
+++ b/app/views/user_mailer/signup_confirmation.html.erb
@@ -1,39 +1,119 @@
 <html>
-	<head><title>Welcome to ResQuery!</title></head>
-	<body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" bgcolor='#ffffff' >
+<head><title>Welcome to ResQuery!</title></head>
+<body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" bgcolor='#ffffff' >
 
-	<style> 
+
+<STYLE>
+@import url(http://fonts.googleapis.com/css?family=Noto+Sans:400,700);
+body{	font-family: 'Noto Sans', sans-serif;}
+.headerTop{background-color:#FC6;border-top:0 solid #000;border-bottom:1px solid #FFF;text-align:center}
+.adminText{font-size:10px;color:#960;line-height:200%;font-family:verdana;text-decoration:none}
+.headerBar{background-color:#FFF;border-top:0 solid #333;border-bottom:10px solid #FFF}
+.title{font-size:20px;font-weight:700;color:#C60;font-family:arial;line-height:110%}
+.subTitle{font-size:11px;font-weight:400;color:#666;font-style:italic;font-family:arial}
+.defaultText{font-size:12px;color:#000;line-height:150%;font-family:trebuchet ms}
+.footerRow{background-color:#FFC;border-top:10px solid #FFF}
+.footerText{font-size:10px;color:#960;line-height:100%;font-family:verdana}
+a{color:#1c51a8}
+h1{font-size:16pt;line-height:100%}
+h2{color:#fff;background:#0090ca;font-size:12pt;line-height:100%;margin:0 0 .5em;padding:.5em}
+</STYLE>
+
+
+
+<table width="100%" cellpadding="10" cellspacing="0" class="backgroundTable" bgcolor='#ffffff' >
+<tr>
+<td valign="top" align="center">
+
+
+
+
+<table width="550" cellpadding="20" cellspacing="0" bgcolor="#FFFFFF">
+<tr>
+<td bgcolor="#FFFFFF" valign="top" style="font-size:10pt;color:#000000;font-family:trebuchet ms; text-align:left;" align="left">
+
+<p style="text-align:justify">
+
+	<h1> Welcome to ResQuery </h1>
+
+	<h3>Hi <%= @user.first_name %>,</h3>
+</p>
+
+<p style="text-align:justify">
 	
-	</style>
+Welcome to ResQuery and thanks for signing up. You have joined hundreds of other students who are managing their job apps online and are committed to getting the jobs of their dreams. 
+</p>
 
-	
-	<h1>Logo (top-left) <b> Welcome to ResQuery </b></h1>
+<p>
+	Sign into your account now <a href = "http://www.resquery.com/users/sign_in"> click here</a>
 
-	Hi <%=@user.first_name %>,
+<p>
+</br>
+<b> Access our knowledge base </b>
+	<ul>
+		<li> <a href = "http://www.resquery.com/articles/8"> How to prepare for internship season </a></li>
+		<li> <a href = "http://www.resquery.com/articles/2"> The art of the Investment Banking Cover Letter </a> </li>
+	</ul>
+</br>
+<b>Improve your applications </b>
+<p>
+Do you want some guidance or another opinion on your resume or cover letter. <a href = "http://www.resquery.com/articles/9">Click here to find out more</a>
+</br>
+</br>
+</br>
+<p>
+Thank you for choosing to use ResQuery to manage your apps online
+<p>
+Wishing you the best of success,
+</br>
+The Team at ResQuery
 
-	Welcome to ResQuery and thanks for signing up. You have joined hundreds of other students who are managing their job apps online and are committed to getting the jobs of their dreams. 
 
-	Sign into your account now click here
 
-	Important Information:
-	Email / Username: <%= @user.email %> 
 
-	<right side>
-		Access our knowledge base:
-			How to prepare for internship season (add link)
-			How to write an investment banking cover letter (add link)
-		
-		Improve your resume
-		Get expert help with your Resume (add link)
-	
-	</br>
-	Thank you for choosing to use ResQuery to manage your apps online
 
-	Wishing you the best of success,
 
-	[Signature]
 
-	The Team at ResQuery
+
+
+
+
+</td>
+</tr>
+
+<tr>
+<td style="background-color:#ececec;border-top:10px solid #FFFFFF;" valign="top">
+<span style="font-size:10px;color:#898989;font-family:verdana;">
+Copyright &#169; ResQuery. All Rights Reserved.<br /><br />
+Room 1025, Quadrangle Building, UNSW Sydney NSW 2052<br />
+Contact us at <a href="mailto:info@unswbsoc.com">team@resumequery.com<br />
+
+
+</span>
+</td>
+</tr>
+
+</table>
+
+
+
+
+
+
+
+
+
+
+
+
+</td>
+</tr>
+</table>
+
+
+
+
+
 
 </body>
 </html>
