moved gumroad script to application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<script type="text/javascript" src="https://gumroad.com/js/gumroad.js"></script>
+
 	<head>
 	  <title>Internship & graduate job application management software: ResumeQuery</title>
 	  <%= stylesheet_link_tag    "application", :media => "all" %>
