--- a/app/views/dashboards/_new_user_page.html.erb
+++ b/app/views/dashboards/_new_user_page.html.erb
@@ -20,9 +20,11 @@
 		<h5>Follow your first job:</h5>
 		<% @jobs.each do |job| %>
 			<%=link_to job.name, job %><br />
-			<%= form_for job, :as => :applist do |f|%>
-				<%= f.hidden_field :job_id, :value => params[:id] %>
-				<%= f.submit "Add to Dashboard", :class => "btn btn-info"%>
+			<% if false %>
+				<%= form_for job, :as => :applist do |f|%>
+					<%= f.hidden_field :job_id, :value => params[:id] %>
+					<%= f.submit "Add to Dashboard", :class => "btn btn-info"%>
+				<% end %>
 			<% end %>
 		<% end %>
 	</div>
@@ -35,5 +37,8 @@
 
 <div class="row-fluid margin-top">
 	<h5>Things from our knowledge base:</h5>
+	<% Article.all.each do |article| %>
+		<%= link_to  article.title, article  %></br>
+	<% end %>
 
 </div>
