--- a/app/views/layouts/_right-board.html.erb
+++ b/app/views/layouts/_right-board.html.erb
@@ -26,7 +26,7 @@
 	</div>
 	
 	<div class="right-board-info center-alignment">
-		<%= link_to "The ResQuery Investment Banking Cover Letter Template BUY NOW FOR $29", "https://gumroad.com/l/IBcoverletter", :class=>"btn btn-info"%>
+		<%= link_to "The ResQuery Investment Banking Cover Letter Template that works", "https://gumroad.com/l/IBcoverletter", :class=>"btn btn-info"%>
 	</div>
 	
 	<div class="right-board-info">
